web_app/k8s/ingress/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.devoops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-api-service
            port:
              number: 80
  - host: grafana.devoops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-grafana
            port:
              number: 80
